--- a/sas/block/_avatar.scss
+++ b/sas/block/_avatar.scss
@@ -107,4 +107,10 @@
     font-size: 25px;
     line-height: 15px;
   }
+  .avatatar__btn {
+    max-width: 200px;
+  }
+  .avatar__inp {
+    max-width: 250px;
+  }
 }
