--- a/css/main.css
+++ b/css/main.css
@@ -82,10 +82,9 @@ body {
 }
 
 .block1__list {
-  margin-left: 100px;
+  margin-left: 200px;
   padding: 14px 0px 10px 0px;
   display: flex;
-  align-items: center;
   justify-content: space-between;
 }
 
@@ -93,7 +92,6 @@ body {
   font-weight: 400;
   font-size: 14px;
   line-height: 18px;
-  max-width: 333px;
   color: #333333;
 }
 
@@ -103,7 +101,6 @@ body {
 
 .item1 {
   display: flex;
-  flex-grow: 1;
 }
 
 .item1 img {
@@ -139,7 +136,6 @@ body {
 .item2 {
   display: flex;
   justify-content: space-between;
-  flex-grow: 5;
 }
 
 .item3 {
@@ -808,6 +804,12 @@ body {
     font-size: 25px;
     line-height: 15px;
   }
+  .avatatar__btn {
+    max-width: 200px;
+  }
+  .avatar__inp {
+    max-width: 250px;
+  }
 }
 .stat {
   padding-bottom: 260px;
@@ -1037,14 +1039,10 @@ body {
 
 .footer__container {
   display: flex;
-}
-
-.footer-block2__img {
-  margin-right: 87px;
+  justify-content: space-between;
 }
 
 .footer-block2__list {
-  margin-right: 87px;
   margin-bottom: 14px;
 }
 
@@ -1066,12 +1064,13 @@ body {
   color: #333333;
 }
 
-.item1 {
+.footer__item1 img {
+  display: flex;
   width: 14px;
   height: 13px;
 }
 
-.item2 {
+.footer__item2 img {
   width: 14px;
   height: 13px;
 }
@@ -1090,7 +1089,7 @@ body {
   background: #ffbd54;
 }
 
-.item3 {
+.footer__item3 img {
   width: 14px;
   height: 13px;
   margin-right: 9px;
@@ -1107,8 +1106,61 @@ body {
   height: 15px;
 }
 
+.footer__wrap {
+  display: flex;
+}
+
 .footer__list__img2 {
   margin-right: 8px;
   width: 23px;
   height: 21px;
+}
+
+@media only screen and (max-width: 1230px) {
+  .footer__wrap {
+    display: flex;
+    flex-direction: column;
+  }
+  .footer-block1__item {
+    display: inline-block;
+    margin-bottom: 15px;
+  }
+  .footer__item1 p {
+    display: none;
+  }
+  .footer__item2 a {
+    display: none;
+  }
+  .footer__item3 a {
+    display: none;
+  }
+  .footer__itemimg1 {
+    display: none;
+  }
+}
+@media only screen and (max-width: 675px) {
+  .footer-block2__img {
+    margin-right: 20px;
+  }
+  .footer__wrap {
+    margin-left: 0px;
+    max-width: 90px;
+    display: flex;
+    flex-direction: column;
+  }
+  .footer-block1__item {
+    margin-right: 10px;
+  }
+  .footer__item1 p {
+    display: none;
+  }
+  .footer__item2 a {
+    display: none;
+  }
+  .footer__item3 a {
+    display: none;
+  }
+  .footer__itemimg1 {
+    display: none;
+  }
 }/*# sourceMappingURL=main.css.map */
